<resources>
    <string name="app_name">GMaker</string>


    <!-- global -->
    <string name="hello_label">Hello</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_label">LOGIN</string>
    <string name="login_label_info_header">GMAKER</string>
    <string name="login_label_info">Silahkan login sebelum menggunakan app ini.</string>
    <string name="daftar_label">DAFTAR</string>
    <!-- Loigin -->
    <string name="login_welcome_label">Welcome</string>
    <string name="login_appname_label">Agenda Maker</string>
    <string name="login_appdesc_label">Make your day more efficient than ever !</string>
    <string name="login_appdesc_label_2">Adli Raihan _ 0616101001</string>
    <string name="login_register_label">Daftar ?</string>
    <!-- PopUP-->
    <string name="login_popup_header_beta">Developer</string>
    <string name="login_popup_header">Hello</string>
    <string name="login_popup_desc">Masuk Developer Mode ?</string>
    <string name="login_popup_option_1">Ya</string>
    <string name="login_popup_option_2">Tidak</string>

    <!-- Daftar -->
    <string name="hint_daftar_username">Username Anda</string>
    <string name="hint_daftar_password">Password Anda</string>
    <string name="hint_daftar_password_conf">Konfirmasi Password Anda</string>
    <string name="daftar_label_header">Daftar</string>


    <string name="lorem_ipsum_sm">Lorem Ipsum Bachelor</string>
    <string name="lorem_ipsum_xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Aliquam vitae libero risus. Suspendisse non nisl turpis. Aliquam sagittis quis lacus sed
        pulvinar. Pellentesque vel sem vel nunc rhoncus fringilla. Sed blandit quam a purus aliquet, sit
        amet tristique leo aliquam. Donec ut magna sed quam cursus consequat. Aliquam dui quam, dictum ac
        auctor vitae, ornare eget quam.
    </string>
    <string name="Details_header_label">Agenda</string>
    <!-- Landing -->
    <string name="landing_activity_agenda_label_1">Current Agenda</string>
    <string name="landing_activity_agenda_label_2">Today Agenda</string>
    <string name="landing_activity_ifnull">Kelihatannya anda tidak mempunyai agenda , Mulai untuk membuat agenda
    </string>
    <string name="landing_activity_ifnull_header">Oops</string>
    <string name="landing_activity_ifnull_create">Buat agenda anda sekarang !</string>
    <string name="Landing_list_agenda">List Agenda Swipe Left</string>
    <string name="Landing_list2_agenda">List Agenda Vertical (Detailed)</string>

    <string name="detail_label_header">Agenda Details</string>
    <string name="detail_label_appointment">365 Days left</string>
    <string name="detail_label_description">Description Detail</string>
    <string name="detail_label_editor">edit</string>
    <!-- Temp -->

    <string name="error_1_eng">Check your Internet Connection !</string>
    <string name="error_1_id">Cek Koneksi Internet Anda !</string>

    <string name="login_popup_failed_header">Status :</string>
    <string name="login_popup_failed_txt_1">Incorect password for</string>
    <string name="login_popup_failed_txt_2">The password you entered is incorrect. Please try again.</string>
    <string name="login_popup_failed_txt_3">Try Again</string>


    <string name="login_onsubmit_loading">Loading</string>
    <string name="retry_conn_label">No Connectivity</string>
    <string name="retry_conn_label_btn">Retry</string>

    <string name="landing_highlight_header">Statistics 2018</string>
    <string name='landing_highlight_1'>Total Agenda</string>
    <string name='landing_highlight_2'>Agenda Selesai</string>
    <string name="landing_highlight_3">Agenda deleted</string>
    <string name="landing_highlight_4">Agenda Created</string>
    <!-- drawable -->
    <string name="drawer_menu_header"></string>
    <string name="drawer_menu_sub_label_1">TOOLS</string>
    <string name="drawer_menu_sub_label_2">INFORMATION</string>
    <string name="drawer_menu_sub_label_3">ACCOUNT</string>
    <string name='drawer_menu_sub_label_0'>APPLICATION</string>

    <string name="drawer_menu_account_info">Account</string>
    <string name="drawer_menu_account_sign_out">Sign Out</string>
    <string name="drawer_menu_account_setting">Settings</string>
    <string name="drawer_menu_done_all">History Activity</string>
    <string name="drawer_menu_delete">Delete History</string>
    <string name="drawer_menu_add">Create Agenda</string>
    <string name="drawer_menu_premium">Subscribe App</string>
    <string name="drawer_menu_addDaily">Add schedule Tomorrow</string>

    <string name="note_created_agenda">
        Note : this application does not have clock target , the notification will appeared when the date target and
        date system are matched.
    </string>

    <string-array name="type_agenda">
        <item>Not important</item>
        <item>Important</item>
    </string-array>


    <!-- Daerah ClockPicker -->
    <string name="clockpicker_label"></string>
    <string name="title_schedule_list">Schedules</string>
    <string name="title_schedule_detail">Schedule Detail</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_firebase_tab">FirebaseTabActivity</string>
    <string name="tab_text_1">Agenda</string>
    <string name="tab_text_2">Schedule</string>
    <string name="tab_text_3">History</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>


</resources>
