<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        android:layout_width="1080dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center|bottom"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorPrimaryDark_Opacity1"
                android:contentDescription="Background" />
            <LinearLayout
                android:id="@+id/Header_Login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:gravity="center"
                android:foregroundGravity="center"
                android:orientation="vertical"
                android:padding="50dp">
                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="4dp"
                    android:background="@color/colorPrimaryDark"/>
                <LinearLayout
                    android:layout_width="300dp"
                    android:background="@color/colorDawn"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="25dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/scriptuitbl"
                        android:text="@string/login_label_info_header"
                        android:paddingVertical="0dp"
                        android:textColor="@color/colorAccent_2"
                        android:textSize="32dp"/>
                    <ImageView
                        android:layout_marginVertical="5dp"
                        android:layout_width="100dp"
                        android:layout_height="2dp"
                        android:background="@drawable/login_background_gradient"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/login_label_info"
                        android:textColor="@color/colorAccent_2"
                        android:textSize="12dp"/>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingVertical="20dp"
                        android:gravity="center">
                        <EditText
                            android:id="@+id/username_Input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_background_gradient"
                            android:layout_marginVertical="5dp"
                            android:inputType="textEmailAddress"
                            android:hint="@string/username_label"
                            android:textSize="12dp"
                            android:paddingVertical="8dp"
                            android:paddingHorizontal="20dp"/>
                        <EditText
                            android:id="@+id/password_Input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_background_gradient"
                            android:layout_marginVertical="5dp"
                            android:inputType="textPassword"
                            android:hint="@string/password_label"
                            android:textSize="12dp"
                            android:paddingVertical="8dp"
                            android:paddingHorizontal="20dp"/>
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/login_button_border"
                            android:text="@string/login_label"
                            android:textColor="@color/colorDawnBlue"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/login_register_label"
                            android:textColor="@color/colorDawnBlue"
                            android:paddingVertical="10dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>