<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        android:layout_width="1080dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center|bottom"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorPrimaryDark_Opacity1"
                android:contentDescription="Background" />
            <LinearLayout
                android:id="@+id/Header_Login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:gravity="center"
                android:foregroundGravity="center"
                android:orientation="vertical"
                android:padding="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/scriptuitbl"
                        android:text="@string/hello_label"
                        android:textColor="@color/colorAccent_2"
                        android:textSize="48dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/login_popup_desc"
                        android:textColor="@color/colorAccent_2"
                        android:textSize="16dp" />
                    <ImageView
                        android:layout_width="54dp"
                        android:layout_height="2dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/colorAccent_2" />
                    <TextView
                        android:id="@+id/developer_btn"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/login_popup_option_1"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:background="@drawable/border_white_radius100_outline"
                        android:textColor="@color/colorAccent_2" />
                    <TextView
                        android:id="@+id/developer_btn_2"
                        android:layout_width="300dp"
                        android:paddingVertical="10dp"
                        android:background="@drawable/border_white_radius100"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/login_popup_option_2"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent_2" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>